--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Вычислитель</title>
+    <title>Calculator</title>
   </head>
   <body class="bg-[#E5C9D7]/50 font-mono">
     <div id="root"></div>
